@@ -84,12 +84,12 @@ void S_CodecUtilClose(snd_stream_t **stream);
 
 
 #define CODECTYPE_NONE		0
-#define CODECTYPE_MID		(1 << 0)
-#define CODECTYPE_MOD		(1 << 1)
-#define CODECTYPE_FLAC		(1 << 2)
-#define CODECTYPE_WAV		(1 << 3)
-#define CODECTYPE_MP3		(1 << 4)
-#define CODECTYPE_OGG		(1 << 5)
+#define CODECTYPE_MID		(1U << 0)
+#define CODECTYPE_MOD		(1U << 1)
+#define CODECTYPE_FLAC		(1U << 2)
+#define CODECTYPE_WAV		(1U << 3)
+#define CODECTYPE_MP3		(1U << 4)
+#define CODECTYPE_OGG		(1U << 5)
 
 #define CODECTYPE_VORBIS	CODECTYPE_OGG
 #define CODECTYPE_WAVE		CODECTYPE_WAV
